# limit-order-book

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pyproject.toml  replay_tmp.jsonl  taq_trades.csv
.github/workflows/: release.yml
cpp/: CMakeLists.txt
cpp/include/lob/: book_core.hpp  price_levels.hpp  taq_writer.hpp
cpp/src/: bench.cpp  book_core.cpp  price_levels.cpp  replay.cpp  taq_writer.cpp  util.cpp
cpp/tests/: test_fifo_same_price.cpp  test_headers_compile.cpp  test_market_sweep.cpp  test_modify_price.cpp  test_partial_empty_onesided.cpp  test_price_levels.cpp  test_stp.cpp  test_types.cpp
cpp/tools/: CMakeLists.txt  bench.cpp  replay.cpp
docs/: bench.csv  hist.csv
docs/strategy/: twap.yaml  vwap.yaml
python/: cli.py
python/olob/: __init__.py  analyze.py  backtest.py  cli.py  crashsnapshot.py  metrics.py
python/olob/crypto/: binance.py
python/orderbook_tools/: reconstruct.py
recon/2025-08-25/binanceus/BTCUSDT/: reconstructed_states.parquet
tests_py/: test_basic_golden.py  test_properties.py
