[build-system]
requires = [
  "scikit-build-core>=0.9",
  "pybind11>=2.12",
  "cmake>=3.21",
  "ninja; platform_system!='Windows'"
]
build-backend = "scikit_build_core.build"

[project]
name = "lob"
version = "0.1.0"
description = "Limit Order Book core with Python bindings and CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.0",
  "click>=8.1.3",
]

[project.optional-dependencies]
tests = ["pytest>=8.0", "hypothesis>=6.98"]

# IMPORTANT: point console script to a function that calls Typer's app()
[project.scripts]
lob = "lob.cli:main"

[tool.scikit-build]
# Include the entire python/ tree; it contains the 'lob' package and cli.py
wheel.packages = ["python"]
cmake.verbose = true
wheel.expand-macos-universal-tags = true
